[gd_scene load_steps=2 format=3 uid="uid://uy6377gunc02"]

[ext_resource type="Script" path="res://Scripts/upgrade_menu.gd" id="1_cv5q1"]

[node name="UpgradeMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cv5q1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1153.0
offset_bottom = 646.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 230.0
offset_top = 204.0
offset_right = 889.0
offset_bottom = 348.0

[node name="FireRateButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Fire Rate"

[node name="HealthButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Max Health"

[node name="DamageButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Damage"

[node name="MultiShotButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Multi Shot"

[node name="RestartButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Restart"
